--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,15 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .spin {
+    animation: element-spin infinite 10s linear;
   }
+}
+
+.element {
+  width: 50px;
+  height: 50px;
+  padding: 3px;
 }
 
 .App-header {
@@ -28,7 +34,7 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes element-spin {
   from {
     transform: rotate(0deg);
   }
