Add spirit register and a card bounce animation

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,8 +21,10 @@
   padding: 3px;
 }
 
-.title {
-  width: 100px;
+.inline-title-image {
+  height: 30px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .app {
