--- a/src/components/spirit-deck/spirit-deck.scss
+++ b/src/components/spirit-deck/spirit-deck.scss
@@ -4,49 +4,43 @@
     $card-width: 208;
     $card-height: 288;
 
-
     display: flex;
     flex-direction: row-reverse;
     height: #{$card-height + $card-padding * $num-cards}px;
     width: #{$card-width + $card-padding * $num-cards}px;
 
-    @for $i from 0 to $num-cards {
-        .card-#{$i} {
-            position: relative;
-            &.card-animate-enter-active {
-                top: #{$i * $card-padding}px;
-                left:  #{$i * -$card-padding}px;
-                margin-left: #{-$card-width}px;
-                z-index: $i;
+    &.clickable {
+        cursor: pointer;
 
-                transition: all 0.6s #{$i / 4}s ease;
-                animation: card-shuffle 1s #{$i / 4}s
-            }
-
-            &.card-animate-enter-done {
-                top: #{$i * $card-padding}px;
-                left:  #{$i * -$card-padding}px;
-                margin-left: #{-$card-width}px;
-                z-index: $i;
-            }
-
-            &.card-animate-exit, &.card-animate-exit-active, &.card-animate-exit-done {
-                top: #{$i * $card-padding}px;
-                left:  #{$i * -$card-padding}px;
-                margin-left: #{-$card-width}px;
-                z-index: $i;
-            }
-            
-            @keyframes card-shuffle {
-                0%   { transform: translateX(0px); }
-                50%  { transform: translateX(-250px); }
-                100%  { transform: translateX(0px); }
-            }
+        &:hover {
+            opacity: .9;
+            animation: deck-wiggle infinite 3s linear
         }
+    }
 
+    &.disabled {
+        cursor: default;
+    }
+
+    @for $i from 0 to $num-cards {
         .prev-card-#{$i} {
-            &.card-animate-enter {
-                position: relative;
+            position: relative;
+            top: #{$i * $card-padding}px;
+            left:  #{$i * -$card-padding}px;
+            margin-left: #{-$card-width}px;
+            z-index: $i;
+        }
+    }
+
+    @for $i from 0 to $num-cards {
+        $delay: calc($i / 4);
+        .card-#{$i} {
+            &.card-animate-enter-active {
+                transition: all 0.5s #{$delay}s ease;
+                animation: card-shuffle 1s #{$delay}s ease-in-out
+            }
+
+            &.card-animate-enter-active, &.card-animate-enter-done, &.card-animate-exit, &.card-animate-exit-active, &.card-animate-exit-done {
                 top: #{$i * $card-padding}px;
                 left:  #{$i * -$card-padding}px;
                 margin-left: #{-$card-width}px;
@@ -54,4 +48,21 @@
             }
         }
     }
+
+    @keyframes deck-wiggle {
+        0%   { transform: rotate(0deg); }
+        25%  { transform: rotate(2deg); }
+        50%   { transform: rotate(0deg); }
+        75%   { transform: rotate(-2deg); }
+        100% { transform: rotate(0deg); }
+    }
+
+    @keyframes card-shuffle {
+        0%   { transform: translateX(0px); }
+        25%  { transform: translateX(-250px); }
+        50%   { transform: translateX(0px); }
+        75%  { transform: translateX(-250px); }
+        100%  { transform: translateX(0px); }
+    }
 }
+
