--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,7 @@
 $background-color: #4e5a4b;
 $primary-color: #ffffff;
-$secondary-color: #bbbbbb
+$secondary-color: #bbbbbb;
+
+$card-border: 4;
+$card-width: 158;
+$card-height: 218;
