--- a/src/components/spirit-card/spirit-card.scss
+++ b/src/components/spirit-card/spirit-card.scss
@@ -1,6 +1,8 @@
+@import '../../variables.scss';
+
 .spirit-card {
-    width: 200px;
-    height: 280px;
-    border: 4px solid black;
+    width: #{$card-width - $card-border * 2}px;
+    height: #{$card-height - $card-border * 2}px;
+    border: #{$card-border}px solid black;
     border-radius: 10px;
 }
