--- a/src/App.scss
+++ b/src/App.scss
@@ -1,48 +1,16 @@
 @import './variables.scss';
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .spin {
-    animation: element-spin infinite 10s linear;
-  }
-}
-
-.element {
-  width: 50px;
-  height: 50px;
-  padding: 3px;
-}
-
-.inline-title-image {
-  height: 30px;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
 .app {
+  width: 100vw;
+  height: 100vh;
   background-color: $background-color;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-@keyframes element-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  
+  .body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
