--- a/src/components/spirit-deck/spirit-deck.scss
+++ b/src/components/spirit-deck/spirit-deck.scss
@@ -7,6 +7,8 @@
 
     display: flex;
     flex-direction: row-reverse;
+    margin-top: 20px;
+    margin-bottom: 20px;
 
     &.clickable {
         cursor: pointer;
