--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,8 @@
-$background-color: #4e5a4b;
-$primary-color: #ffffff;
-$secondary-color: #bbbbbb;
+$background-color: #4E5A4B;
+
+$primary-color: #000000;
+$secondary-color: #D9D9D9;
+
 
 $card-border: 4;
 $card-width: 158;
