Apply spirit filter to deck

--- a/src/components/spirit-card-filter-overlay/spirit-card-filter-overlay.scss
+++ b/src/components/spirit-card-filter-overlay/spirit-card-filter-overlay.scss
@@ -1,18 +1,30 @@
 @import '../../variables.scss';
 
+$background-z-index: 40;
+$content-z-index: 41;
+
 .spirit-card-filter-overlay {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0px;
+    z-index: $content-z-index;
+    overflow-y: scroll;
+
 
     &.hidden {
         display: none;
     }
 
+    .button-header {
+        padding: 10px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+    }
+
     .spirit-list {
-        position: fixed;
-        z-index: 41;
+        z-index: $content-z-index;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -23,24 +35,21 @@
             height: 140px;
             margin: 4px;
             cursor: pointer;
+
+            &.unselected {
+                filter: grayscale(1)
+            }
         }
     }
+}
 
-    .background {
-        opacity: 0.8;
-        background-color: $primary-color;
-        position: absolute;
-        top: 0px;
-        z-index: 40;
-        width: 100%;
-        height: 100%;
-    }
-
-    .button-header {
-        padding: 10px;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        z-index: 41;
-    }
+.background {
+    opacity: 0.8;
+    background-color: $primary-color;
+    position: absolute;
+    top: 0px;
+    z-index: $background-z-index;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
