--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 @import './variables.scss';
 
 .app {
-  width: 100vw;
-  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
   background-color: $background-color;
   display: flex;
   flex-direction: column;
