Navigate to summary screen after setup

--- a/src/pages/player-setup-page/player-setup-page.scss
+++ b/src/pages/player-setup-page/player-setup-page.scss
@@ -6,4 +6,12 @@
   align-items: center;
   justify-content: center;
   overflow-x: hidden;
+
+  .icon-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    margin: 10px;
+  }
 }
