Make slight improvements to colours and button styles

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 @import '../../variables.scss';
 
 .header {
-    color: $primary-color;
+    color: $text-color;
     background-color: $secondary-color;
     width: 100%;
     box-shadow: 0px 0px 8px 2px #000000;
