--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,8 +1,12 @@
-$background-color: #4E5A4B;
+$background-color: #73877B;
 
 $primary-color: #000000;
 $secondary-color: #D9D9D9;
+$tertiary-color: #544343;
 $error-color: red;
+
+$overlay-background-color: #000000;
+$text-color: #000000;
 
 
 $card-border: 4;
