--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
 @import './variables.scss';
 
 .app {
-  min-width: 100vw;
+  width: 100%;
+  min-width: 400px;
   min-height: 100vh;
   background-color: $background-color;
   display: flex;
