--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -19,13 +19,16 @@
     }
 
     .title {
+        font-family: 'Permanent Marker';
+        font-weight: normal;
+        font-size: 18;
         margin-top: -10px;
         margin-bottom: -10px;
     }
 
     .subtitle {
-        margin-top: -20px;
-        font-size: 12px;
+        margin-top: -30px;
+        font-size: 16px;
 
         span {
             position: relative;
