--- a/src/pages/player-setup-page/player-setup-page.scss
+++ b/src/pages/player-setup-page/player-setup-page.scss
@@ -4,8 +4,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   overflow-x: hidden;
+  min-height: 700px;
 
   .icon-bar {
     display: flex;
@@ -21,6 +22,6 @@
     padding: 5px 20px 7px 20px;
     background-color: $secondary-color;
     transform: rotate(-5deg);
-    border: 3px solid black;
+    font-family: 'Permanent Marker';
   }
 }
