--- a/src/components/box-button/box-button.scss
+++ b/src/components/box-button/box-button.scss
@@ -1,8 +1,8 @@
 @import '../../variables.scss';
 
 .box-button {
-    width: 70%;
-    max-width: 400px;
+    width: 400px;
+    max-width: 100%;
     margin-top: 20px;
     cursor: pointer;
 
