--- a/src/components/box-grid/box-grid.scss
+++ b/src/components/box-grid/box-grid.scss
@@ -3,6 +3,15 @@
 .box-grid {
     width: 80%;
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.box-column {
+    max-width: 400px;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;   
