--- a/src/components/adversary-wheel/adversary-wheel.scss
+++ b/src/components/adversary-wheel/adversary-wheel.scss
@@ -1,7 +1,5 @@
 @import '../../variables.scss';
 
-$deceleration: 0.8;
-
 .adversary-wheel {
     overflow:hidden;
     position: relative;
@@ -31,6 +29,24 @@ $deceleration: 0.8;
                     transform-origin: 0% 100%;
                     border: 1px solid black;
                 }
+
+                &.selected-#{$i} {
+                    $slice-degrees: #{calc(360deg / $n)};
+                    $degrees-to-spin: #{calc(360deg * 5 + $slice-degrees * $i + $slice-degrees / 2)};
+
+                    &.wheel-spin-enter-active {
+                        animation: wheel-spin-#{$i}-#{$n} 3s 0ms cubic-bezier(0,0,0,.99);
+                    }
+                
+                    &.wheel-spin-enter-active, &.wheel-spin-enter-done {
+                        transform: rotate(#{$degrees-to-spin});
+                    }
+    
+                    @keyframes wheel-spin-#{$i}-#{$n} {
+                        0%   { transform: rotate(0deg); }
+                        100% { transform: rotate(#{$degrees-to-spin}); }
+                    }
+                }
             }
 
             .slice-contents {
@@ -43,21 +59,8 @@ $deceleration: 0.8;
         }
     }
 
-    &.wheel-spin-enter-active {
-        animation: wheel-spin 3s 0ms cubic-bezier(0,0,0,.99);
-    }
-
-    &.wheel-spin-enter-active, &.wheel-spin-enter-done {
-        transform: rotate(1880deg);
-    }
-
     &.disabled {
         cursor: default;
-    }
-
-    @keyframes wheel-spin {
-        0%   { transform: rotate(0deg); }
-        100% { transform: rotate(1880deg); }
     }
 
     .slice-contents {
@@ -101,3 +104,17 @@ $deceleration: 0.8;
         background-color: #56545E;
     }
 }
+
+.arrow-down {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    top: 120px;
+    width: 0; 
+    height: 0; 
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 20px solid black;
+  }
