--- a/src/pages/player-setup-page/player-setup-page.scss
+++ b/src/pages/player-setup-page/player-setup-page.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   overflow-x: hidden;
   min-height: 700px;
 
